--- a/projet1/pom.xml
+++ b/projet1/pom.xml
@@ -57,6 +57,16 @@
 			<version>18.0</version>
 		</dependency>
 
+		<dependency>
+
+			<groupId>org.apache.commons</groupId>
+
+			<artifactId>commons-csv</artifactId>
+
+			<version>1.0</version>
+
+		</dependency>
+
 	</dependencies>
 
 
